nuevo modulo de usuarios y roles y validaciones
